# hiku

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yaml  lets.yaml  mypy.ini  package-lock.json  package.json  pi.yaml  pyproject.toml  readthedocs-env.yml  readthedocs.yml  requirements-docs.txt  requirements-rtd.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt  setup.py  tox.ini  webpack.config.js
.github/workflows/: benchmark.yaml  codeflash.yaml  codspeed.yaml  release.yaml  test.yaml
dev/bench/: data.js
docker/: Dockerfile
docs/: asyncio.rst  basics.rst  caching.rst  conf.py  database.rst  development.rst  directives.rst  enums.rst  example.proto  example_pb2.py  extensions.rst  federation.rst  graphql.rst  index.rst  inputs.rst  integrations.rst  interfaces.rst  protobuf.rst  scalars.rst  schema.rst  subgraph.rst  telemetry.rst  test_asyncio.py  test_database.py  test_graphql.py  test_index.py  test_protobuf.py  test_subgraph.py  unions.rst
docs/_static/: fixes.css  toggle.css  toggle.js
docs/_templates/: layout.html
docs/basics/: test_stage1.py  test_stage2.py  test_stage3.py
docs/changelog/: changes_02.rst  changes_03.rst  changes_04.rst  changes_05.rst  changes_06.rst  changes_07.rst  changes_08.rst  index.rst  migration_02.rst
docs/endpoints/: async_example.py  sync_example.py
docs/federation/: cart_service.py  order_service.py
docs/guide/: asyncio.rst  basics.rst  database.py  database.rst  definition.rst  index.rst  introduction.rst  sqlalchemy.rst  subgraph.py  subgraph.rst  test_asyncio.py  test_database.py  test_subgraph.py
docs/integrations/: aiohttp_example.py  fastapi_example.py  flask_example.py
docs/reference/: expr.rst  graph.rst  index.rst  query.rst  readers.rst  result.rst
examples/: README.rst  console.py  graphiql.html  graphiql.py  graphiql_async.py  graphql_aiohttp.py  graphql_federation.py  graphql_federation_v2.py  graphql_flask.py
examples/declarative/: after.py  before.py  common.py
examples/federation-compatibility/: docker-compose.yml  federation.Dockerfile  run_compatibility_test.sh  server.py
federation/: directive.py  endpoint.py  engine.py  entities.py  graph.py  introspection.py  sdl.py  service.py  util.py  utils.py  validate.py
hiku/: __init__.py  _compat.py  builder.py  cache.py  checker.py  compat.py  compiler.py  context.py  custom_scalar.py  directive.py  dsl.py  edn.py  engine.py  enum.py  error.py  expr.py  graph.py  interface.py  merge.py  nodes.py  operation.py  query.py  reader.py  refs.py  result.py  scalar.py  schema.py  store.py  types.py  union.py  utils.py  validator.py
hiku/assets/: console.html
hiku/classes/: node.py  strings.py  types.py
hiku/console/: ui.py
hiku/declarative/: engine.py
hiku/denormalize/: base.py  graphql.py
hiku/directives/: __init__.py
hiku/endpoint/: graphql.py
hiku/executors/: asyncio.py  base.py  queue.py  sync.py  thread.py  threads.py
hiku/export/: graphql.py  protobuf.py  simple.py
hiku/expr/: checker.py  compiler.py  core.py  nodes.py  refs.py
hiku/extensions/: __init__.py  base_extension.py  base_validator.py  context.py  prometheus.py  query_aliases_validator.py  query_depth_validator.py  query_parse_cache.py  query_transform_cache.py  query_validation_cache.py  sentry.py
hiku/extentions/: __init__.py  cached_directive.py  context.py  parse_query_cache.py  runner.py
hiku/federation/: denormalize.py  directive.py  endpoint.py  engine.py  graph.py  introspection.py  scalars.py  schema.py  sdl.py  utils.py  version.py
hiku/introspection/: directive.py  graphql.py  types.py
hiku/mypy/: plugin.py
hiku/protobuf/: query.proto  query_pb2.py  result.proto
hiku/readers/: graphql.py  protobuf.py  simple.py
hiku/sources/: aiopg.py  graph.py  sql.py  sqlalchemy.py  sqlalchemy_async.py  subgraph.py
hiku/telemetry/: prometheus.py
hiku/typedef/: kinko.py  types.py
hiku/utils/: __init__.py  cached_property.py  const.py  immutable.py  serialize.py  typing.py
hiku/validate/: errors.py  graph.py  query.py
hiku/writers/: json.py  protobuf.py  simple.py
hiku_rs/: Cargo.toml  Readme.md  benchmark.sh  pyproject.toml
hiku_rs/src/: lib.rs
scripts/: link_hiku.sh  release.sh  release_check.sh
stubs/hiku/: builder.pyi  compat.pyi  edn.pyi  engine.pyi  graph.pyi  query.pyi  result.pyi  types.pyi  utils.pyi
test_federation/: test_denormalize.py  test_engine.py  test_entities.py  test_graph.py  test_introspection_graphql.py  test_sdl.py
tests/: base.py  test_builder.py  test_cache.py  test_checker.py  test_compiler.py  test_console.py  test_denormalize_base.py  test_denormalize_graphql.py  test_directives.py  test_docs.py  test_edn.py  test_endpoint_graphql.py  test_endpoint_memory.py  test_engine.py  test_enum.py  test_executor_asyncio.py  test_executor_queue.py  test_export_graphql.py  test_export_protobuf.py  test_export_simple.py  test_graph.py  test_hashable.py  test_interface.py  test_introspection_graphql.py  test_query.py  test_query_merger.py  test_read_graphql.py  test_read_protobuf.py  test_read_simple.py  test_reader.py  test_refs.py  test_result.py  test_scalar.py  test_schema.py  test_source_graph.py  test_source_sql.py  test_source_sqlalchemy.py  test_telemetry_prometheus.py  test_typedef_kinko.py  test_types.py  (+10 more)
tests/benchmarks/: test_denormalize.py  test_endpoint.py  test_engine_execute.py  test_graph_init.py  test_is_hashable.py  test_read_graphql.py  test_schema.py  test_validate.py
tests/classes/: droid.py  test_types.py
tests/extensions/: test_custom_context.py  test_query_aliases_validator.py  test_query_depth_validator.py  test_query_parser_cache.py  test_query_transform_cache.py  test_query_validation_cache.py
tests/protobuf/: jowk.proto  result.proto  result_pb2.py
tests/test_declarative/: __init__.py
tests3/: test_source_aiopg.py
tests_pg/: conftest.py  test_source_aiopg.py  test_source_sqlalchemy_asyncpg.py
tests_py3_pg/: test_source_aiopg.py
(+92 files in other folders)
