[project]
name = "hiku"
dynamic = ["version"]
description = "Library to implement Graph APIs"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Vladimir Magamedov", email = "vladimir@magamedov.com"},
    {name = "Maksym Kindritskyi", email = "kindritskiy.m@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Documentation = "https://hiku.readthedocs.io/en/latest/"
Repository = "https://github.com/evo-company/hiku"
Homepage = "https://github.com/evo-company/hiku"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.version]
source = "file"
path = "hiku/__init__.py"

[tool.pdm.build]
includes = [
    "hiku",
    "hiku/pytyped",
]
excludes = [ "tests", "**/.*.*" ]

[tool.pdm.dev-dependencies]
test = [
    "astor>=0.8.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "faker>=18.13.0",
    "pytest-benchmark[histogram]>=4.0.0",
    "asyncpg>=0.28.0",  # for tests_pg
    "greenlet>=3.0.0",  # for tests_pg
]
dev = [
    "graphql-core>=3.2.3",  # for graphql support
    "sqlalchemy<2",
    "protobuf>=4.24.4",  # for protobuf support
    "aiopg>=1.4.0",  # for async postgresql support
    "prometheus-client>=0.17.1",  # for prometheus metrics
    "sentry-sdk>=1.31.0",  # for sentry tracing
    "typing-extensions>=4.7.1",
    "mypy>=1.4.1",
    "black>=23.3.0",
    "flake8>=5.0.4",
    "grpcio-tools>=1.59.0",
]
docs = [
    "sphinx>=5.3.0",
    "furo>=2023.3.27",
]
examples = [
    "flask>=2.2.5",
    "aiohttp>=3.8.6",
]

[tool.pdm.resolution.overrides]
importlib-metadata = ">=4.3"

[tool.pdm.scripts]
bench = "python -m pytest --benchmark-enable {args:tests}"
test = "python -m pytest {args:tests}"
test-pg = "python -m pytest {args:tests_pg}"
test-pg-local = "python -m pytest --pg-host=localhost {args:tests_pg}"
test-all = {composite = ["test", "test-pg"]}
fmt = "python -m black hiku"
mypy = "python -m mypy"
flake = "python -m flake8"
docs = "sphinx-build -b html docs docs/build"
docs-open = "open docs/build/index.html"
check = {composite = ["fmt", "test", "mypy", "flake"]}
example = "python examples/{args:graphql_flask}.py"
proto-query = "python -m grpc_tools.protoc -I. --python_out=. hiku/protobuf/query.proto"
proto-tests = "python -m grpc_tools.protoc -I. --python_out=. tests/protobuf/result.proto"
proto-example = "python -m grpc_tools.protoc -I. --python_out=. docs/example.proto"
proto = {composite = ["proto-query", "proto-tests", "proto-example"]}

[tool.pytest.ini_options]
addopts = "--tb=native --benchmark-disable"
testpaths = [
    "tests",
    "tests_pg"
]

filterwarnings = [
    "once::DeprecationWarning",
    "once::PendingDeprecationWarning",
    "ignore::DeprecationWarning:graphql.*",
    "ignore::DeprecationWarning:promise.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

[tool.coverage.run]
branch = true
source = [
    "hiku",
]

[tool.mypy]
files = [
    "hiku",
]
python_version = 3.7
check_untyped_defs = true
#disallow_any_generics = true
#disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_errors = false

exclude = [
    "tests",
    "tests_pg"
]

[[tool.mypy.overrides]]
module = "hiku.telemetry.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.edn.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.export.simple.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.export.protobuf.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.readers.simple.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.readers.protobuf.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.refs.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.checker.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.compiler.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.sources.sqlalchemy.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.sources.aiopg.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.typedef.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.builder.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphql.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

[tool.black]
line-length = 80
target-version = ['py37']

[tool.isort]
py_version = "37"
profile = "black"
line_length = 80
