[project]
name = "hiku"
version = "0.8.0rc22"
description = "Library to implement Graph APIs"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "BSD-3-Clause"
authors = [
  { name = "Vladimir Magamedov", email = "vladimir@magamedov.com" },
  { name = "Maksym Kindritskyi", email = "kindritskiy.m@gmail.com" },
]
dependencies = []
requires-python = ">=3.10"

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Documentation = "https://hiku.readthedocs.io/en/latest/"
Repository = "https://github.com/evo-company/hiku"
Homepage = "https://github.com/evo-company/hiku"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
  "astor>=0.8.1",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.2.0",
  "faker>=37.12.0",
  "pytest-benchmark[histogram]>=5.2.1",
  "pytest-memray>=1.7.0",
  "asyncpg>=0.28.0",
  "greenlet>=3.0.0",
  "tox>=4.31.0",
  "tox-gh-actions>=3.4.0",
]
dev = [
  "graphql-core>=3.2.7",
  "sqlalchemy<2",
  "aiopg>=1.4.0",
  "prometheus-client>=0.23.1",
  "sentry-sdk>=2.43.0",
  "typing-extensions>=4.15.0",
  "mypy>=1.18.2",
  "black>=25.9.0",
  "flake8>=7.3.0",
  "codeflash>=0.20.3",
]
docs = [
  "sphinx<9,>=8.1.3",
  "furo>=2025.9.25",
  "sphinx-inline-tabs>=2023.4.21",
  "sphinx-autobuild>=2024.10.03",
]
examples = ["flask>=2.2.5", "aiohttp>=3.8.6"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hiku*"]

[tool.setuptools.package-data]
hiku = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--tb=native --benchmark-disable"
testpaths = ["tests", "tests_pg"]
asyncio_default_fixture_loop_scope = "session"

filterwarnings = [
  "once::DeprecationWarning",
  "once::PendingDeprecationWarning",
  "ignore::DeprecationWarning:graphql.*",
  "ignore::DeprecationWarning:promise.*",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:sqlalchemy.*",
]

[tool.coverage.run]
branch = true
source = ["hiku"]

[tool.mypy]
files = ["hiku"]
python_version = "3.10"
check_untyped_defs = true
#disallow_any_generics = true
#disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_errors = false

exclude = ["tests", "tests_pg"]

[[tool.mypy.overrides]]
module = "hiku.telemetry.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.refs.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.checker.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.expr.compiler.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.sources.sqlalchemy.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.sources.aiopg.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "hiku.builder.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphql.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
py_version = "310"
profile = "black"
line_length = 80

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "hiku"
tests-root = "tests"
benchmarks-root = "tests/benchmarks/store"
ignore-paths = []
formatter-cmds = ["black $file"]
