[package]
name = "hiku_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hiku_rs"
crate-type = ["cdylib"]

[dependencies]
graphql-parser = "0.4.0"

[dependencies.pyo3]
version = "*"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
